Fix parquet tests for Java 17+ by allowing security manager
The parquet tests were failing on CI with Java 21 due to Hadoop's use of the deprecated security manager API. This commit adds the necessary JVM option to allow the security manager when running tests.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>